--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html>
 <head>
 <title>learning about HTML!,tutle>
-<head>
+</head>
 <body>
 
 
 <header>
 <h1> favorite recipies </h1>
-</head>
 
 <section>
-<h1> chocolte chip cookies</h2>
-
+<h2> chocolte chip cookies</h2>
+  <p> h2cho chip cookies</p>
+  <ul>
+    <li> flour</LI>
+  
+  </ul>
+    
 
 </section>
 </body>
 </html>
+  
